Changelog for skalibs.

In 2.12.0.0
-----------

 - librandom revamped (again).
   * random_init() and random_finish() removed.
   * random_char() removed.
   * random_string() renamed to random_buf().
   * early versions added.


In 2.11.2.0
-----------

 - Bugfixes.
 - User-provided CPPFLAGS, CFLAGS and LDFLAGS are now honored in
    sysdep autodetection.
 - envdir_internal() now supports a SKALIBS_ENVDIR_NOCLAMP option, for
    unlimited-size variable reading.


In 2.11.1.0
-----------

 - fd_close() doesn't retry if close() fails. (i.e. adapts to Linux's
behaviour over HP-UX's.)
 - New function: opendir_at.


In 2.11.0.0
-----------

 - libbiguint removed.
 - Obsolete skalibs/environ.h and skalibs/getpeereid.h removed.
 - rc4 and md5 removed.
 - iobuffer removed.
 - fd_cat and fd_catn changed signatures.
 - All *_t types renamed to avoid treading on POSIX namespace.
 - subgetopt() renamed to lgetopt().
 - signal functions reworked; skasigaction removed; sig_stack removed
 - Various functions removed: skaoffsetof(), selfpipe_untrap()
 - cdb_make renamed to cdbmake; ui changed to 1=success/0=failure.
 - cdb redesigned. cdb is now fixed, cdb_reader holds the state for cdb_find,
    which puts data pointer and len directly into a cdb_data. A cdb
    is always a map, pointers should always work.
 - cdb_successor removed (unsafe to use); cdb_nextkey changed to
    cdb_traverse_next, which puts key and data into two cdb_data's.
 - cdb does not touch errno anymore.
 - New posixplz function: munmap_void.


In 2.10.0.3
-----------

 - Bugfixes.


In 2.10.0.2
-----------

 - Bugfixes.


In 2.10.0.1
-----------

 - Bugfixes.


In 2.10.0.0
-----------

 - New openc_* functions.
 - New function: ipc_bind_reuse_lock(), taking a lock before
unconditionally deleting the socket.
 - ipc_bind_reuse() rewritten to use ipc_bind_reuse_lock(),
so it does the right thing instead of clobbering sockets.
 - Complete revamping of the pathexec functions, see exec.h.