@@ -25,6 +25,8 @@ as well as <tt>random_char()</tt>. </li>
  <li> random functions now have an <tt>early</tt> version, to use when
 randomness is required before the generator can be seeded (i.e. in
 programs running in the very early boot). </li>
+ <li> New <a href="libstddjb/djbunix.html">djbunix</a> functions:
+<tt>waitn_posix()</tt>, <tt>waitn_reap_posix()</tt> </li>
 </ul>
 
 <h2> in 2.11.2.0 </h2>
