@@ -8,6 +8,7 @@ In 2.12.0.0
    * random_char() removed.
    * random_string() renamed to random_buf().
    * early versions added.
+ - New djbunix functions: waitn_posix(), waitn_reap_posix()
 
 
 In 2.11.2.0
